[package]
name = "slpagora"
version = "0.1.0"
authors = ["Tobias Ruck <ruck.tobias@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.1"
sha2 = "0.8.0"
ripemd160 = "0.8.0"
rand = "0.6.5"
hex = "0.3.2"
secp256k1 = "0.12.2"
num = "0.2.0"
num-derive = "0.2.4"
num-traits = "0.2.6"
text_io = "0.1.7"
reqwest = "0.9.15"
serde = { version="1.0.90", features = ["derive"] }
dirs = "1.0.5"
qrcode = "0.10.0"
